C#_Framework/MyMachineControl_Toolkits/HTM_Bsp_Lib_4.06/Example/CVI/HTM_Bsp_Lib/HTM_Bsp_Lib.h

/*--------------------get motion IO status---------------------------------*/
HTM_API I32 HTM_GetMotionIOBit(I32 axisIdx, I32 bit);
HTM_API I32 HTM_GetINP(I32 axisIdx);
HTM_API I32 HTM_GetPEL(I32 axisIdx);
HTM_API I32 HTM_GetMEL(I32 axisIdx);
HTM_API I32 HTM_GetORG(I32 axisIdx);
HTM_API I32 HTM_GetAlarm(I32 axisIdx);
HTM_API I32 HTM_GetSVON(I32 axisIdx);
HTM_API I32 HTM_SetSVON (I32 axisIdx, I32 on_off);
HTM_API I32 HTM_SetSVON2 (I32 axis1, I32 axis2, I32 on_off);
HTM_API I32 HTM_SetSVON3 (I32 axis1, I32 axis2, I32 axis3, I32 on_off);
HTM_API I32 HTM_SetSVON4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, I32 on_off);
HTM_API I32 HTM_SetSVONN (I32 axisList[], I32 axisNum, I32 on_off);
HTM_API I32 HTM_SetSVONAll(I32 on_off);
HTM_API I32 HTM_SVDone(I32 axisIdx);
HTM_API I32 HTM_SVDone2 (I32 axis1, I32 axis2);
HTM_API I32 HTM_SVDone3 (I32 axis1, I32 axis2, I32 axis3);
HTM_API I32 HTM_SVDone4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4);
HTM_API I32 HTM_SVDoneN (I32 axisList[], I32 axisNum);
HTM_API I32 HTM_SVDoneAll (void);
HTM_API I32 HTM_SetSVOver(I32 axisIdx);
HTM_API I32 HTM_SetSVOver2 (I32 axis1, I32 axis2);
HTM_API I32 HTM_SetSVOver3 (I32 axis1, I32 axis2, I32 axis3);
HTM_API I32 HTM_SetSVOver4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4);
HTM_API I32 HTM_SetSVOverN (I32 axisList[], I32 axisNum);
HTM_API I32 HTM_SetSVOverAll (void);
 

HTM_API I32 HTM_EnableEL (I32 axisIdx, I32 pel_enable, I32 mel_enable);
HTM_API I32 HTM_EnableSEL (I32 axisIdx, I32 spel_enable, I32 smel_enable);
/*------------------------ axis motion functions -----------------------------*/
HTM_API I32 HTM_Home (I32 axisIdx);
HTM_API I32 HTM_Home2(I32 axis1, I32 axis2);
HTM_API I32 HTM_Home3(I32 axis1, I32 axis2, I32 axis3);
HTM_API I32 HTM_Home4(I32 axis1, I32 axis2, I32 axis3, I32 axis4);
HTM_API I32 HTM_HomeN(I32 axisList[], I32 axisNum);
HTM_API I32 HTM_HomeOver (I32 axisIdx);
HTM_API I32 HTM_HomeOver2(I32 axis1, I32 axis2);
HTM_API I32 HTM_HomeOver3(I32 axis1, I32 axis2, I32 axis3);
HTM_API I32 HTM_HomeOver4(I32 axis1, I32 axis2, I32 axis3, I32 axis4);
HTM_API I32 HTM_HomeOverN(I32 axisList[], I32 axisNum);
HTM_API I32 HTM_CalcMotionTimeEx(HTM_MovePara *mp, F64 distance, F64* motion_time);
HTM_API I32 HTM_CalcMotionTime(I32 axisIdx, F64 distance, F64* motion_time);
HTM_API I32 HTM_MovePreload(I32 axisIdx);
HTM_API I32 HTM_MoveTrigger(I32 axisIdx);
HTM_API I32 HTM_MoveEx(I32 axisIdx, F64 pos_in_unit, F64 vel_ratio, I32 mode, const HTM_MovePara *mp);
HTM_API I32 HTM_Move(I32 axisIdx, F64 pos_in_unit, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_Move2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_Move3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_Move4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_MoveN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_ASMove (I32 axisIdx, F64 pos_in_unit, F64 vel_ratio);
HTM_API I32 HTM_ASMove2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_ASMove3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_ASMove4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_ASMoveN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_ATMove (I32 axisIdx, F64 pos_in_unit, F64 vel_ratio);
HTM_API I32 HTM_ATMove2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_ATMove3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_ATMove4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_ATMoveN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_RSMove (I32 axisIdx, F64 pos_in_unit, F64 vel_ratio);
HTM_API I32 HTM_RSMove2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_RSMove3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_RSMove4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_RSMoveN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_RTMove (I32 axisIdx, F64 pos_in_unit, F64 vel_ratio);
HTM_API I32 HTM_RTMove2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_RTMove3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_RTMove4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_RTMoveN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_TQMove(I32 axisIdx, F64 force, F64 vel);
HTM_API I32 HTM_BondMove (I32 axisIdx, F64 pos, F64 force, F64 vel);