C#Winform/MyMachineControl_Toolkits/HTM_interface/HTM_interface/HTM_Bsp_Lib.cs


        #region  Get motion IO status
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetMotionIOBit(Int32 axisIdx, Int32 bit);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetINP(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetPEL(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetMEL(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetORG(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetAlarm(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetSVON(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVON(Int32 axisIdx, Int32 on_off);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVON2(Int32 axis1, Int32 axis2, Int32 on_off);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVON3(Int32 axis1, Int32 axis2, Int32 axis3, Int32 on_off);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVON4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Int32 on_off);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVONN(Int32[] axisList, Int32 axisNum, Int32 on_off);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVONAll(Int32 on_off);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SVDone(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SVDone2(Int32 axis1, Int32 axis2);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SVDone3(Int32 axis1, Int32 axis2, Int32 axis3);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SVDone4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SVDoneN(Int32[] axisList, Int32 axisNum);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SVDoneAll();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVOver(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVOver2(Int32 axis1, Int32 axis2);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVOver3(Int32 axis1, Int32 axis2, Int32 axis3);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVOverN(Int32[] axisList, Int32 axisNum);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetSVOverAll();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EnableEL(Int32 axisIdx, Int32 pel_enable, Int32 mel_enable);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EnableSEL(Int32 axisIdx, Int32 spel_enable, Int32 smel_enable);
        #endregion

        #region  Single axis motion functions
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Home(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Home2(Int32 axis1, Int32 axis2);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Home3(Int32 axis1, Int32 axis2, Int32 axis3);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Home4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeN(Int32[] axisList, Int32 axisNum);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeOver(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeOver2(Int32 axis1, Int32 axis2);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeOver3(Int32 axis1, Int32 axis2, Int32 axis3);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeOverN(Int32[] axisList, Int32 axisNum);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CalcMotionTime(Int32 axisIdx, Double distance, out Double motion_time);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CalcMotionTimeEx(ref MOTION_PARA mp, Double distance, out Double motion_time);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MovePreload(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveTrigger(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveEx(Int32 axisIdx, Double pos_in_unit, Double vel_ratio, Int32 mode, ref MOTION_PARA mp);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Move(Int32 axisIdx, Double pos_in_unit, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Move2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Move3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Move4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMove(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMove2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMove3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMove4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMoveN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMove(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMove2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMove3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMove4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMoveN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMove(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMove2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMove3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMove4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMoveN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMove(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMove2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMove3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMove4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMoveN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_TQMove(Int32 axisIdx, Double force, Double vel);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_BondMove(Int32 axisIdx, Double pos, Double force, Double vel);
